syntax = "proto3";

package auth;

message LoginRequest {
  string user_id = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}